--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span></span>
     </div>
     <nav class="nav-links" id="nav-links">
-        <a href="#about">About</a>
+        <a href="#about">Abouts</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
