Fix LinkedIn link and improve formatting
Updated LinkedIn link and fixed minor formatting issues.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
     <div class="footer-social">
         <a href="https://github.com/morshedalam547" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         <span>•</span>
-        <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        <a href="www.linkedin.com/in/
+morshed-alam-5280b0360
+" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
     </div>
     <p>© 2025 Morshed Alam — Built with HTML & CSS</p>
 </footer>
@@ -104,3 +106,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
