--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
     <div class="footer-social">
         <a href="https://github.com/morshedalam547" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         <span>•</span>
-        <a href="www.linkedin.com/in/
-morshed-alam-5280b0360
+        <a href="https://www.linkedin.com/in/morshed-alam-5280b0360/
 " target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
     </div>
     <p>© 2025 Morshed Alam — Built with HTML & CSS</p>
@@ -106,4 +105,5 @@ morshed-alam-5280b0360
 <script src="script.js"></script>
 </body>
 </html>
+
 
