Update skills section to include WordPress
Added WordPress to the skills section.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <span>Laravel</span>
         <span>Vue.js</span>
         <span>MySQL</span>
+        <span>WordPress</span>
     </div>
 </section>
 
@@ -105,6 +106,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
