--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#about">Abouts</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
-        <a href="https://docs.google.com/forms/d/1pd-LcAmWQ1rK9b-lai9NLcc2Hz1gUfi16qJhal_IRO8/edit">Contact</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdb2dYXoMIdumYjkdymMseJmvEFW6IxYonz1l7VKk3f1yO3iw/viewform?usp=sharing&ouid=107209618913522252855">Contact</a>
     </nav>
 </header>
 
@@ -106,6 +106,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
