Replace contact form with a contact link
Updated contact section to use a link instead of a form.

--- a/index.html
+++ b/index.html
@@ -83,12 +83,18 @@
 
 <!-- Contact Section -->
 <section id="contact" class="section bg">
-    <h2>Contact Me</h2>
-    <form class="contact-form" action="contact.php" method="POST">
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdb2dYXoMIdumYjkdymMseJmvEFW6IxYonz1l7VKk3f1yO3iw/viewform?usp=sharing&ouid=107209618913522252855" 
+   target="_blank"
+   style="display:inline-block;padding:10px 20px;background:#2563eb;color:#fff;
+          text-decoration:none;border-radius:6px;font-weight:600;">
+   Contact
+</a>
+
+    <!-- <form class="contact-form" action="contact.php" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
+        <textarea name="message" placeholder="Your Message" required></textarea> -->
+        <!-- <button type="submit">Send Message</button> -->
     </form>
 </section>
 
@@ -106,6 +112,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
