--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <!-- Contact Section -->
 <section id="contact" class="section bg">
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdb2dYXoMIdumYjkdymMseJmvEFW6IxYonz1l7VKk3f1yO3iw/viewform?usp=sharing&ouid=107209618913522252855" 
+  <a href="https://docs.google.com/forms/d/1VGKGZSPZ7xckWDTnM8MgMy1KIfZkrUtRwbRfFflakP8/edit?pli=1" 
    target="_blank"
    style="display:inline-block;padding:10px 20px;background:#2563eb;color:#fff;
           text-decoration:none;border-radius:6px;font-weight:600;">
@@ -112,6 +112,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
