--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#about">Abouts</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdb2dYXoMIdumYjkdymMseJmvEFW6IxYonz1l7VKk3f1yO3iw/viewform?usp=sharing&ouid=107209618913522252855">Contact</a>
+        <a href="https://docs.google.com/forms/d/1VGKGZSPZ7xckWDTnM8MgMy1KIfZkrUtRwbRfFflakP8/edit?pli=1">Contact</a>
     </nav>
 </header>
 
@@ -112,6 +112,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
