Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
         <a href="#about">Abouts</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
-        <a href="https://docs.google.com/forms/d/1VGKGZSPZ7xckWDTnM8MgMy1KIfZkrUtRwbRfFflakP8/edit?pli=1">Contact</a>
+          <a href="https://docs.google.com/forms/d/1VGKGZSPZ7xckWDTnM8MgMy1KIfZkrUtRwbRfFflakP8/edit?pli=1" 
+   target="_blank"
+   style="display:inline-block;padding:10px 20px;background:#2563eb;color:#fff;
+          text-decoration:none;border-radius:6px;font-weight:600;">
+   Contact
+</a>
     </nav>
 </header>
 
@@ -112,6 +117,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
