--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
         <a href="#about">Abouts</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
-          <a href="https://docs.google.com/forms/d/1VGKGZSPZ7xckWDTnM8MgMy1KIfZkrUtRwbRfFflakP8/edit?pli=1" 
-   target="_blank"
-   
-   Contact
-</a>
+   <a href="#contact">Contact</a>
     </nav>
 </header>
 
