--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <a href="#about">Abouts</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
-   <a href="#contact">Contact</a>
+   <a href="https://docs.google.com/forms/d/1VGKGZSPZ7xckWDTnM8MgMy1KIfZkrUtRwbRfFflakP8/edit?pli=1" 
+   target="_blank">Contact</a>
     </nav>
 </header>
 
@@ -112,6 +113,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
