--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!-- About Section -->
 <section id="about" class="section">
     <h2>About Me</h2>
-    <p>I am a passionate web developer. I love building web applications using PHP, Laravel, Vue.js and MySQL.</p>
+    <p>I am a passionate fresher web developer with strong skills in HTML, CSS, JavaScript, PHP, and Laravel. I enjoy building responsive, user-friendly, and dynamic web applications. I am always eager to learn new technologies, improve my coding skills, and create real-world solutions through clean and efficient code..</p>
 </section>
 
 <!-- Skills Section -->
@@ -113,6 +113,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
