--- a/index.html
+++ b/index.html
@@ -84,19 +84,14 @@
 
 <!-- Contact Section -->
 <section id="contact" class="section bg">
-  <a href="https://docs.google.com/forms/d/1VGKGZSPZ7xckWDTnM8MgMy1KIfZkrUtRwbRfFflakP8/edit?pli=1" 
-   target="_blank"
-   style="display:inline-block;padding:10px 20px;background:#2563eb;color:#fff;
-          text-decoration:none;border-radius:6px;font-weight:600;">
-   Contact
-</a>
+    <h2>Contact Me</h2>
 
-    <!-- <form class="contact-form" action="contact.php" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" placeholder="Your Message" required></textarea> -->
-        <!-- <button type="submit">Send Message</button> -->
-    </form>
+    <div class="contact-box">
+        <p><i class="fa-solid fa-envelope"></i> morshedalam547@gmail.com</p>
+        <p><i class="fa-solid fa-phone"></i> +880 1741382391</p>
+
+        <a href="mailto:yourmail@gmail.com" class="btn">Send Email</a>
+    </div>
 </section>
 
 <!-- Footer -->
@@ -113,6 +108,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
