--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <div class="contact-box">
         <p><i class="fa-solid fa-envelope"></i> morshedalam547@gmail.com</p>
-        <p><i class="fa-solid fa-phone"></i> +880 1741382391</p>
+        <p><i class="fa-solid fa-phone"></i> +880 1741382391</p><br>
 
         <a href="mailto:yourmail@gmail.com" class="btn">Send Email</a>
     </div>
@@ -108,6 +108,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
